eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: creuza-svc
  namespace: creuza
spec:
  selector:
    app: creuza
  ports:
    - protocol: TCP
      port: 80
      targetPort: 18789
  type: ClusterIP
